--- a/Founders.html
+++ b/Founders.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-
 <html>
 <link rel="stylesheet" href="style.css">
-<img src="img/IMG3286.JPG" alt="Founder" width="300">
 <h3>Anirudh Kaushik Founder/Programmer</h3>
-
-<h1></h1>
-
-<img src="img/IMG7067.JPG" alt="Founder" width="300">
-<h3>Jasper Olson Programmer</h3>
-
-<h1></h1>
-
-<img src="img/IMG7789.JPG" alt="Founder" width="300">
-<h3>Nathan Pepper Beta-Tester/Bug Finder</h3>
-
-
-
-
-<a href="index.html" target=_self title="back to Home Page"> 
-    Back To Home
+<br>
+<h3>Jasper Olson  Lead Programmer</h3>
+<br>
+<h3>Nathan Pepper Beta-Tester/3D modeller</h3>
+<br>
+<h3>Sabrina Greiner  Lead Artist</h3>
+<br>
+<h3>Dean Stale Artist</h3>
+<br>
+<h3>Maxwell Seeto Beta-Tester</h3>
+<br>
+<h3>Shaan Shinde 3D modeller</h3>
+<a href="index.html" target=_self title="Back to Home Page">Back To Home</a>
 </html>
