--- a/Founders.html
+++ b/Founders.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
-<h3>Anirudh Kaushik Founder/Programmer</h3>
+<h3 style="color: orange;">Anirudh Kaushik Founder/Programmer</h3>
 <br>
-<h3>Jasper Olson  Lead Programmer</h3>
+<h3 style="color: orange;">Jasper Olson  Lead Programmer</h3>
 <br>
-<h3>Nathan Pepper Beta-Tester/3D modeller</h3>
+<h3 style="color: orange;">Nathan Pepper Beta-Tester/3D modeller</h3>
 <br>
-<h3>Sabrina Greiner  Lead Artist</h3>
+<h3 style="color: orange;">Sabrina Greiner  Lead Artist</h3>
 <br>
-<h3>Dean Stale Artist</h3>
+<h3 style="color: orange;">Dean Stale Artist</h3>
 <br>
-<h3>Maxwell Seeto Beta-Tester</h3>
+<h3 style="color: orange;">Maxwell Seeto Beta-Tester</h3>
 <br>
-<h3>Shaan Shinde 3D modeller</h3>
+<h3 style="color: orange;">Shaan Shinde 3D modeller</h3>
 <a href="index.html" target=_self title="Back to Home Page">Back To Home</a>
 </html>
