--- a/Contacts.html
+++ b/Contacts.html
@@ -2,11 +2,11 @@
 
 <html>
 <link rel="stylesheet" href="style.css">
-<h2>HOW TO CONTACT US:</h2>
+<h2 style="color: orange;">HOW TO CONTACT US:</h2>
 <h1></h1>
-<h3>Gmail: NerdsUnited724@gmail.com</h3>
+<h3 style="color: orange;">Gmail: NerdsUnited724@gmail.com</h3>
 <h3></h3>
-<h3>Discord Server: https://discord.gg/FkNFhek6d4</h3>
+<h3 style="color: orange;">Discord Server: https://discord.gg/FkNFhek6d4</h3>
 
 
 
